attempt 6 at fixing navbar bug on iphone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -316,7 +316,11 @@ height:75px;
 width:100%;
 margin-bottom:20px;
 padding: 10px;
-z-index: 10;
+}
+
+#navbutton1, #navbutton2 {
+	position: relative;
+	z-index: 10;
 }
 
 #clear {
